tests/sumo/spec/departure/errors/speed_given50/errors.sumo
Error: Departure speed for vehicle '1' is too high for the departure edge 'beg', time=0.00.
Quitting (on error).
